cmake_minimum_required(VERSION 3.5)
project(leo_msgs)

find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(builtin_interfaces REQUIRED)
find_package(std_msgs REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/ChargingMonitorData.msg"
  "msg/Imu.msg"
  "msg/WheelOdom.msg"
  "msg/WheelOdomMecanum.msg"
  "msg/WheelStates.msg"
  DEPENDENCIES builtin_interfaces std_msgs
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
